--- a/myown.css
+++ b/myown.css
@@ -1,5 +1,10 @@
 body{
+    font-family: 'Open Sans', sans-serif;
     background-image: linear-gradient(to bottom right, rgb(0, 247, 255), rgb(255, 103, 255))
+    /* background-image: url('../images/product1.png'); */
+}
+h1 {
+    font-family: 'Abril Fatface', cursive;
 }
 .card-img{
     weight: 32px;
